--- a/src/main/ncdio_pio.F90.in
+++ b/src/main/ncdio_pio.F90.in
@@ -582,12 +582,6 @@ contains
 
     ns = ni*nj
 
-    if (single_column) then
-       ni = 1
-       nj = 1
-       ns = 1
-    end if
-
   end subroutine ncd_inqfdims
 
   !-----------------------------------------------------------------------
@@ -1712,30 +1706,19 @@ contains
        if (varpresent) then
           if (single_column) then
              start(:) = 1 ; count(:) = 1
-             call scam_field_offsets(ncid,subgrid_level_name,vardesc,start,count, &
-                                     found=found, posNOTonfile=posNOTonfile)
-             status = pio_inq_varndims(ncid, vardesc, ndims)
-             n=ndims
+             call scam_field_offsets(ncid,subgrid_level_name,vardesc,start,count)
              call ncd_inqfdims(ncid, isgrid2d, ni, nj, ns)
              if (isgrid2d) then
-                if (trim(subgrid_level_name) == grlnd) then
-                   n=2
-                   if (present(nt)) then
-                      start(3) = nt ; count(3) = 1
-                      n=3
-                   end if
-                else
-                   n=1
-                   if (present(nt)) then
-                      n=2
-                      start(2) = nt ; count(2) = 1
-                   end if
-                end if
-             else
                 n=1
                 if (present(nt)) then
                    n=2
                    start(2) = nt ; count(2) = 1
+                end if
+             else
+                n=2
+                if (present(nt)) then
+                   start(3) = nt ; count(3) = 1
+                   n=3
                 end if
              end if
              call pio_seterrorhandling(ncid, PIO_BCAST_ERROR, oldhandle)
@@ -1922,76 +1905,32 @@ contains
        if (varpresent) then
           if (single_column .and. flag == 'read') then
              start(:) = 1 ; count(:) = 1
-             call scam_field_offsets(ncid, subgrid_level_name, vardesc, start, count, &
-                                     found=found, posNOTonfile=posNOTonfile)
-             status = pio_inq_varndims(ncid, vardesc, ndims)
-             n=ndims
+             call scam_field_offsets(ncid, subgrid_level_name, vardesc, start, count)
              call ncd_inqfdims(ncid, isgrid2d, ni, nj, ns)
              if (isgrid2d) then
-                if (trim(subgrid_level_name) == grlnd) then
-                   n=3
-                   if (present(switchdim)) then
-                      if (switchdim) then
-                         count(3) = size(temp,dim=2)
-                      else
-                         count(3) = size(data,dim=2)
-                      end if
-                   else
-                      count(3) = size(data,dim=2)
-                   end if
-                   if (present(nt)) then
-                      start(4) = nt; count(4) = 1
-                      n=4
-                   end if
-                else
-                   n=2
-                   if (present(switchdim)) then
-                      if (switchdim) then
-                         count(2) = size(temp,dim=2)
-                      else
-                         count(2) = size(data,dim=2)
-                      end if
-                   else
-                      count(2) = size(data,dim=2)
-                   end if
-                   if (present(nt)) then
-                      n=3
-                      start(3) = nt ; count(3) = 1
-                   end if
+                count(3) = size(data,dim=2)
+                n=3
+                if (present(nt)) then
+                   start(4) = nt; count(4) = 1
+                   n=4
                 end if
              else
+                count(2) = size(data,dim=2)
                 n=2
-                if (present(switchdim)) then
-                   if (switchdim) then
-                      count(2) = size(temp,dim=2)
-                   else
-                      count(2) = size(data,dim=2)
-                   end if
-                else
-                   count(2) = size(data,dim=2)
-                end if
                 if (present(nt)) then
+                   start(3) = nt ; count(3) = 1
                    n=3
-                   start(3) = nt; count(3) = 1
                 end if
              end if
              if (present(switchdim)) then
-                if (switchdim) then
-                   if (ndims == 1) then
-                      write(iulog,*) trim(subname),' ERROR: dont know how to handle for switchdim'
-                      call shr_sys_abort(errMsg(sourcefile, __LINE__))
-                   end if
-                   status = pio_get_var(ncid, vardesc, start(1:n), count(1:n), temp)
-                   do j = lb2,ub2
-                      do i = lb1,ub1
-                         data(i,j) = temp(j,i)
-                      end do
+                status = pio_get_var(ncid, vardesc, start(1:n), count(1:n), temp)
+                do j = lb2,ub2
+                   do i = lb1,ub1
+                      data(i,j) = temp(j,i)
                    end do
-                else
-                   status = pio_get_var(ncid, vardesc, start(1:ndims), count(1:ndims), data)
-                endif
+                end do
              else
-                status = pio_get_var(ncid, vardesc, start(1:ndims), count(1:ndims), data)
+                status = pio_get_var(ncid, vardesc, start(1:n), count(1:n), data)
              endif
           else
              status = pio_inq_varndims(ncid, vardesc, ndims)
@@ -2181,35 +2120,24 @@ contains
              start(:) = 1
              count(:) = 1
              call scam_field_offsets(ncid, subgrid_level_name, vardesc, start, count)
-             status = pio_inq_varndims(ncid, vardesc, ndims)
-             n=ndims
              call ncd_inqfdims(ncid, isgrid2d, ni, nj, ns)
              if (isgrid2d) then
-                if (trim(subgrid_level_name) == grlnd) then
-                   n=4
-                   count(3) = size(data,dim=2);
-                   count(4) = size(data,dim=3)
-                   if (present(nt)) then
-                      start(5) = nt
-                      count(5) = 1
-                      n=5
-                   end if
-                else
-                   n=3
-                   count(2) = size(data,dim=2)
-                   count(3) = size(data,dim=3)
-                   if (present(nt)) then
-                      n=4
-                      start(4) = nt
-                      count(4) = 1
-                   end if
+                count(3) = size(data,dim=2);
+                count(4) = size(data,dim=3)
+                n=4
+                if (present(nt)) then
+                   start(5) = nt
+                   count(5) = 1
+                   n=5
                 end if
              else
+                count(2) = size(data,dim=2)
+                count(3) = size(data,dim=3)
                 n=3
                 if (present(nt)) then
-                   n=4
                    start(4) = nt
                    count(4) = 1
+                   n=4
                 end if
              end if
              status = pio_get_var(ncid, vardesc, start(1:n), count(1:n), data)
@@ -2512,10 +2440,7 @@ contains
        if ( trim(dimname)=='nj'.or. trim(dimname)=='lat'.or. trim(dimname)=='lsmlat') then
           start(i)=latidx
           count(i)=1
-       else if ( trim(dimname)=='ni'.or. trim(dimname)=='lon'.or. trim(dimname)=='lsmlon') then
-          start(i)=lonidx
-          count(i)=1
-       else if ( trim(dimname)=='gridcell') then
+       else if ( trim(dimname)=='ni'.or. trim(dimname)=='lon'.or. trim(dimname)=='lsmlon'.or. trim(dimname)=='gridcell') then
           start(i)=lonidx
           count(i)=1
        else if ( trim(dimname)=='column') then
