--- a/src/main/ncdio_pio.F90.in
+++ b/src/main/ncdio_pio.F90.in
@@ -1706,19 +1706,19 @@ contains
        if (varpresent) then
           if (single_column) then
              start(:) = 1 ; count(:) = 1
-             call scam_field_offsets(ncid,subgrid_level_name,vardesc,start,count)
+             call scam_field_offsets(ncid,subgrid_level_name,vardesc,start,count,found=found,posNOTonfile=posNOTonfile)
              call ncd_inqfdims(ncid, isgrid2d, ni, nj, ns)
              if (isgrid2d) then
-                n=1
-                if (present(nt)) then
-                   n=2
-                   start(2) = nt ; count(2) = 1
-                end if
-             else
                 n=2
                 if (present(nt)) then
                    start(3) = nt ; count(3) = 1
                    n=3
+                end if
+             else
+                n=1
+                if (present(nt)) then
+                   n=2
+                   start(2) = nt ; count(2) = 1
                 end if
              end if
              call pio_seterrorhandling(ncid, PIO_BCAST_ERROR, oldhandle)
@@ -1905,7 +1905,7 @@ contains
        if (varpresent) then
           if (single_column .and. flag == 'read') then
              start(:) = 1 ; count(:) = 1
-             call scam_field_offsets(ncid, subgrid_level_name, vardesc, start, count)
+             call scam_field_offsets(ncid, subgrid_level_name, vardesc, start, count,found=found,posNOTonfile=posNOTonfile)
              call ncd_inqfdims(ncid, isgrid2d, ni, nj, ns)
              if (isgrid2d) then
                 count(3) = size(data,dim=2)
@@ -2103,6 +2103,7 @@ contains
     type(var_desc_t)                 :: vardesc
     integer                          :: ni,nj,ns
     logical                          :: isgrid2d   ! if true, latlon grid
+    logical                          :: found      ! if true, found lat/lon dims on file
     character(len=*),parameter :: subname='ncd_io_3d_{TYPE}' ! subroutine name
     !-----------------------------------------------------------------------
 
@@ -2119,7 +2120,7 @@ contains
           if (single_column .and. flag == 'read') then
              start(:) = 1
              count(:) = 1
-             call scam_field_offsets(ncid, subgrid_level_name, vardesc, start, count)
+             call scam_field_offsets(ncid, subgrid_level_name, vardesc, start, count,found=found,posNOTonfile=posNOTonfile)
              call ncd_inqfdims(ncid, isgrid2d, ni, nj, ns)
              if (isgrid2d) then
                 count(3) = size(data,dim=2);
@@ -2441,6 +2442,9 @@ contains
           start(i)=latidx
           count(i)=1
        else if ( trim(dimname)=='ni'.or. trim(dimname)=='lon'.or. trim(dimname)=='lsmlon'.or. trim(dimname)=='gridcell') then
+          start(i)=lonidx
+          count(i)=1
+       else if ( trim(dimname)=='gridcell') then
           start(i)=lonidx
           count(i)=1
        else if ( trim(dimname)=='column') then
